deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: detail
  labels:
    app: detail
spec:
  ports:
    - port: 8081
      name: http
  selector:
    app: detail
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: detail
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: detail
    spec:
      containers:
        - name: detail
          image: detail:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: user
  labels:
    app: user
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: user
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: user
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: user:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
